<resources>
    <string name="app_name">GaoGao</string>

    <string name="login_welcome">欢迎来到告告APP！</string>
    <string name="login">登录</string>
    <string name="login_now">马上登录</string>
    <string name="login_number_please">请输入您的账号</string>
    <string name="login_password_please">请输入您的密码</string>
    <string name="login_create">创建账号!</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_agreement">登录即表示同意《用户协议》及《隐私政策》</string>
    <string name="create">创建</string>
    <string name="create_name_please">请输入昵称</string>
    <string name="create_number_please">请输入账号</string>
    <string name="create_password_please">请输入密码</string>
    <string name="create_password_again_please">请再输入密码</string>
    <string name="create_now">立即创建</string>
    <string name="main_home">主页</string>
    <string name="main_mine">我的</string>

</resources>