<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_cyan">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_yellow">

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:src="@mipmap/chevron_left_white" />

            <TextView
                android:id="@+id/tv_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@mipmap/mobile"/>

                <EditText
                    android:id="@+id/et_login_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:lines="1"
                    android:ems="10"
                    android:text=""
                    android:textSize="15sp"
                    android:textColor="@color/main_green"
                    android:hint="@string/login_number_please"
                    android:selectAllOnFocus="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@mipmap/lock" />

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:inputType="textPassword"
                    android:password="true"
                    android:lines="1"
                    android:ems="10"
                    android:text=""
                    android:textSize="15sp"
                    android:textColor="@color/main_green"
                    android:hint="@string/login_password_please"
                    android:selectAllOnFocus="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_login_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_create"
                    android:textSize="12sp"
                    android:textColor="@color/main_green"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_login_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_forget"
                    android:textSize="12sp"
                    android:textColor="@color/main_green"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_ffda5c_30_bg"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/main_green"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <CheckBox
                android:id="@+id/cb_login_agreement"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/selector_check_circle"
                android:button="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/login_agreement"
                android:singleLine="true"
                android:textSize="12sp"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>