<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_cyan">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_yellow">

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sw_40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/sw_8dp"
                android:src="@mipmap/chevron_left_white"
                android:scaleType="fitCenter"/>

            <TextView
                android:id="@+id/tv_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_create"
                android:textColor="@color/white"
                android:textSize="@dimen/sw_18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/sw_30dp"
                    android:layout_height="@dimen/sw_30dp"
                    app:srcCompat="@mipmap/user"/>

                <EditText
                    android:id="@+id/et_create_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:lines="1"
                    android:ems="10"
                    android:text=""
                    android:maxLength="8"
                    android:textSize="@dimen/sw_15sp"
                    android:textColor="@color/main_green"
                    android:hint="@string/create_name_please"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/sw_30dp"
                    android:layout_height="@dimen/sw_30dp"
                    app:srcCompat="@mipmap/mobile"/>

                <EditText
                    android:id="@+id/et_create_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:lines="1"
                    android:ems="10"
                    android:text=""
                    android:textSize="@dimen/sw_15sp"
                    android:textColor="@color/main_green"
                    android:hint="@string/create_number_please"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/sw_30dp"
                    android:layout_height="@dimen/sw_30dp"
                    app:srcCompat="@mipmap/lock" />

                <EditText
                    android:id="@+id/et_create_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:inputType="textPassword"
                    android:password="true"
                    android:lines="1"
                    android:ems="10"
                    android:text=""
                    android:textSize="@dimen/sw_15sp"
                    android:textColor="@color/main_green"
                    android:hint="@string/create_password_please" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/sw_30dp"
                    android:layout_height="@dimen/sw_30dp"
                    app:srcCompat="@mipmap/lock" />

                <EditText
                    android:id="@+id/et_create_password_again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:inputType="textPassword"
                    android:password="true"
                    android:lines="1"
                    android:ems="10"
                    android:text=""
                    android:textSize="@dimen/sw_15sp"
                    android:textColor="@color/main_green"
                    android:hint="@string/create_password_again_please" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="性别:"
                    android:textSize="@dimen/sw_15sp"
                    android:textStyle="bold"
                    android:textColor="@color/main_green"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_create_man"
                        android:layout_width="@dimen/sw_30dp"
                        android:layout_height="@dimen/sw_30dp"
                        android:layout_marginLeft="@dimen/sw_30dp"
                        android:background="@drawable/selector_sex_man"
                        android:button="@null"/>

                    <RadioButton
                        android:id="@+id/rb_create_woman"
                        android:layout_width="@dimen/sw_30dp"
                        android:layout_height="@dimen/sw_30dp"
                        android:layout_marginLeft="@dimen/sw_40dp"
                        android:background="@drawable/selector_sex_woman"
                        android:button="@null"/>

                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_create"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sw_30dp"
                android:layout_marginTop="@dimen/sw_20dp"
                android:background="@drawable/round_ffda5c_30_bg"
                android:gravity="center"
                android:text="@string/create"
                android:textColor="@color/main_green"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/sw_20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <CheckBox
                android:id="@+id/cb_login_agreement"
                android:layout_width="@dimen/sw_20dp"
                android:layout_height="@dimen/sw_20dp"
                android:background="@drawable/selector_check_circle"
                android:button="@null"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sw_5dp"
                android:text="@string/login_agreement"
                android:singleLine="true"
                android:textSize="@dimen/sw_12sp"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>